hide scrollbars, fix revenge

--- a/style.css
+++ b/style.css
@@ -462,6 +462,9 @@ span.char.faction {
     object-position: top right;
 
 }
+html {
+    overflow: hidden;
+}
 
 
 @keyframes notify {
